# json-processor

./: .gitignore  CMakeLists.txt  README.md  task2Answers.txt  task3Answers.txt
src/: BlockingQueue.cpp  BlockingQueue.h  Entity.h  Helper.cpp  Helper.h  JsonHelper.cpp  JsonHelper.h  QueryResult.cpp  QueryResult.h  SynchronizedQueue.cpp  SynchronizedQueue.h  main.cpp
